# bbfw

./: .gitignore  AUTHORS  COPYING  ChangeLog  ChangeLog.md  Makefile.am  NEWS  NEWS.md  README  README.md  TODO.md  acinclude.m4  autogen.sh  configure.ac  slackware-package.sh
bindleadmin.xcodeproj/: project.pbxproj
bindleadmin.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
bindleadmin.xcodeproj/project.xcworkspace/xcshareddata/: bindleadmin.xccheckout
bindletools.xcodeproj/: project.pbxproj
build-aux/: .gitignore  autogen.sh  git-package-version.sh  git-tar-name.txt
doc/: slack-desc
m4/: .gitignore  bindle.m4
src/: bbfw-log.in  bbfw.conf-example.in  bbfw.in  bbnet-stats.in  bbnet.conf-example.in  bbnet.in  bindleadmin-script.profile.in  cronmail.sh.in  git-proj-stats.sh  git-proj-stats.sh.in  pub-generate-readme.sh.in  pub-rsync-remotes.sh.in  rc.firewall  rc.firewall.in  rc.firewall.rules  rc.inet1.conf  rc.inet1_local  rc.inet1_local_down  server-sync-admin.sh.in  slack-pkg-audit.sh.in  slack-sync-auth.sh.in  slackware-network-check.sh.in  slackware-sync-auth.sh.in  slackware-update-mirrors.sh.in
src/bash/: bindle.sh
src/firewall.d/: ipsets-example  rules-example  rules4-example  rules6-example
src/firewall.d/global.d/: ipsets-example  rules-example  rules4-example  rules6-example
src/init.d/: bbfw.firewall.in  bbfw.network.in
src/misc/: bindleadmin-script.profile.in  git-proj-cleanup.sh.in  pub-generate-readme.sh.in  pub-rsync-remotes.sh.in
src/network.d/: net-down-example  net-up-example  netdown-example  netup-example  rc.inet1_local_down-example
src/openrc/: bbfw.firewall.in  bbfw.network.in
src/slack/: global-example  mkinitrd-all.sh.in  rc.firewall  rc.firewall.global-example  rc.firewall.global4-example  rc.firewall.global6-example  rc.firewall.globalsets-example  rc.firewall.in  rc.firewall.policy-example  rc.firewall.policy4-example  rc.firewall.policy6-example  rc.firewall.rules-example  rc.firewall.rules4  rc.firewall.rules4-example  rc.firewall.rules6  rc.firewall.rules6-example  rc.inet1_local.in  rc.inet1_local_down.example  rc.inet1_local_up-example  slack-desc  slack-net-check.sh.in  slack-pkg-audit.sh.in
src/slack/firewall.d/: rules-example
src/slack/firewall.d/global.d/: rules4-example
src/slackware/: rc.inet1.conf.in
src/systemd/: bbfw.firewall-sync.service.in  bbfw.firewall.service.in  bbfw.network-sync.service.in  bbfw.network.service.in
